--- a/SmartBrainAuthentication/src/main/res/layout/sb_authentication_signin_fragment.xml
+++ b/SmartBrainAuthentication/src/main/res/layout/sb_authentication_signin_fragment.xml
@@ -1,14 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#BDBDBD"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/giorgi"
-        android:textSize="25sp"
-        android:gravity="center"
+    <View
+        android:id="@+id/fieldsBackgroundView"
+        android:background="@drawable/sb_authentication_view_background"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/bottomDivider"
+        app:layout_constraintTop_toTopOf="@id/topDivider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="signin" />
+        android:layout_height="0dp"/>
+
+    <com.example.smartbraincomponents.components.auth.SBCustomAuthField
+        android:id="@+id/emailCustomAuthFieldView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        app:hint="Email"
+        app:fieldType="email"
+        app:icon="@drawable/sb_authentication_ic_email"
+        app:layout_constraintBottom_toTopOf="@id/passwordCustomAuthFieldView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:layout_editor_absoluteX="20dp" />
+
+
+    <com.example.smartbraincomponents.components.auth.SBCustomAuthField
+        android:id="@+id/passwordCustomAuthFieldView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        app:hint="Password"
+        app:fieldType="password"
+        app:passwordIndicatorMargin="5dp"
+        app:passwordIndicatorSize="10dp"
+        app:passwordIndicatorBackground="@drawable/sb_password_indicator_background"
+        app:setToggleButton="true"
+        android:layout_marginVertical="20dp"
+        app:icon="@drawable/sb_authentication_ic_password"
+        app:layout_constraintBottom_toTopOf="@id/forgotPasswordTextView"
+        app:layout_constraintTop_toBottomOf="@id/emailCustomAuthFieldView" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/forgotPasswordTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:paddingVertical="10dp"
+        android:text="Forgot Password?"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/passwordCustomAuthFieldView"
+        app:layout_constraintTop_toBottomOf="@id/passwordCustomAuthFieldView" />
+
+
+   <View
+       android:id="@+id/topDivider"
+       android:layout_width="match_parent"
+       android:layout_marginBottom="50dp"
+       app:layout_constraintBottom_toTopOf="@id/emailCustomAuthFieldView"
+       android:layout_height="1dp"/>
+
+    <View
+        android:id="@+id/bottomDivider"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
+        android:layout_height="1dp"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="160dp"
+        android:text="Sign In"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:elevation="0dp"
+        android:textAllCaps="false"
+        android:background="@drawable/sb_authentication_button_background"
+        app:layout_constraintEnd_toEndOf="@id/fieldsBackgroundView"
+        app:layout_constraintStart_toStartOf="@id/fieldsBackgroundView"
+        app:layout_constraintBottom_toBottomOf="@id/fieldsBackgroundView"
+        app:layout_constraintTop_toBottomOf="@id/fieldsBackgroundView"
+        android:layout_height="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
