--- a/SmartBrainComponents/src/main/res/layout/sb_base_fragments_layout.xml
+++ b/SmartBrainComponents/src/main/res/layout/sb_base_fragments_layout.xml
@@ -29,32 +29,33 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/backButton"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="10dp"
-                android:rotation="180"
-                android:visibility="visible"
-                android:src="@drawable/ic_arrow"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/cancelButton" />
+                android:layout_height="30dp"
+                android:rotation="180"
+                android:visibility="gone"
+                android:src="@drawable/ic_arrow"
+                app:layout_constraintEnd_toStartOf="@id/fragmentTitle"
+                app:layout_constraintTop_toTopOf="@id/closeButton" />
 
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/fragmentTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginTop="2dp"
                 android:textColor="#636262"
+                android:layout_marginStart="40dp"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@id/cancelButton"
-                app:layout_constraintEnd_toStartOf="@id/cancelButton"
-                app:layout_constraintStart_toEndOf="@id/backButton"
-                app:layout_constraintTop_toTopOf="@id/cancelButton"
+                app:layout_constraintBottom_toBottomOf="@id/closeButton"
+                app:layout_constraintEnd_toStartOf="@id/closeButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/closeButton"
                 tools:text="title" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/cancelButton"
+                android:id="@+id/closeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -68,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/cancelButton" />
+                app:layout_constraintTop_toBottomOf="@id/closeButton" />
 
             <FrameLayout
                 android:id="@+id/fragmentBaseContainer"
